--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     },
     "dependencies": {
         "react": "~15.4.0",
-        "react-native": "0.41.2"
+        "react-native": "0.41.2",
+        "react-navigation": "^1.0.0-beta.3"
     },
     "devDependencies": {
         "babel-jest": "18.0.0",
